src/components/nav/nav.css
nav {
  background: rgba(0, 0, 0, 0.3);
  width: max-content;
  display: block;
  padding: 0.5rem 1rem;
  z-index: 20;
  position: fixed;
  left: 50%;
  right: 50%;
  transform: translateX(-50%);
  bottom: 2rem;
  display: flex;
  gap: 0.8rem;
  border-radius: 3rem;
  backdrop-filter: blur(15px);
}

nav a {
  background: transparent;
  padding: 0.5rem;
  border-radius: 50%;
  display: flex;
  color: var(--container-color);
  font-size: 1.5rem;
}

nav a:hover {
  background-color: rgba(0, 0, 0, 0.1);
  color: var(--title-color);
}

nav a.active {
  background-color: rgba(255, 255, 255, 0.9);
  color: var(--title-color-dark);
}

/*=============== BREAKPOINTS ===============*/
/* For large devices */
@media screen and (max-width: 992px) {
  nav a {
    font-size: 1.25rem;
  }
}

/* For medium devices */
@media screen and (max-width: 768px) {
}

@media screen and (max-width: 576px) {
}

/* For small devices */
@media screen and (max-width: 350px) {
  nav a {
    font-size: 1rem;
  }
}

